# OpenLibrarian

./: .example_env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
openlibrarian_root/: build.sh  manage.py  render.yml  requirements.txt  requirements_retired.txt  webpack.config.js
openlibrarian_root/almanac/: apps.py  urls.py  views.py
openlibrarian_root/almanac/tests/: test_friends.py  test_profile.py  test_relays.py  test_settings.py  test_urls.py
openlibrarian_root/archives/: apps.py  urls.py  views.py
openlibrarian_root/archives/tests/: test_404.py  test_about.py  test_privacy.py  test_updates.py  test_urls.py
openlibrarian_root/assets/scripts/: add-toast.js  copy.js  event-build.js  event-coordinator.js  event-parse.js  event-push.js  get-cookie.js  index.js  login-nip07.js  login-nip46.js  login-rw.js  login-utils.js  login.js  (+7 more)
openlibrarian_root/cataglogue/: apps.py  forms.py  urls.py  views.py
openlibrarian_root/catalogue/: forms.py  urls.py  views.py
openlibrarian_root/circulation_desk/: apps.py  context_processors.py  forms.py  urls.py  views.py
openlibrarian_root/glossary/: forms.py  urls.py  views.py
openlibrarian_root/library_card/: apps.py  urls.py  views.py
openlibrarian_root/openlibrarian/: asgi.py  settings.py  urls.py  wsgi.py
openlibrarian_root/transfers/: urls.py  views.py
openlibrarian_root/utils/: Book.py  Connections.py  Constants.py  General.py  Importer.py  Interests.py  Library.py  Login.py  Network.py  Notifications.py  OpenLibrary.py  Profile.py  Progress.py  Releases.py  Review.py  Session.py
(+68 files in other folders)
